<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_recipe_step_detail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardview_recipe_ingredient"
            style="@style/Base.CardView">

            <TextView
                android:id="@+id/txt_card_ingredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:onClick="clickIngredients"
                android:padding="20dp"
                android:text="@string/txt_ingredient"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_recipe_steps"
            android:layout_below="@id/cardview_recipe_ingredient"
            android:layout_marginTop="10dp">

        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>

</LinearLayout>