<resources>
    <string name="app_name">Baking App</string>
    <string name="baking_app">baking</string>

    <string name="no_internet">No connection with internet</string>
    <string name="no_video">No video available</string>
    <string name="txt_serving">Servings:</string>
    <string name="txt_card">Card</string>

    <string name="txt_shortDescription">Short Descritpion</string>
    <string name="txt_thumbnail">Thumbnail</string>
    <string name="appwidget_text">Baking</string>
    <string name="add_widget">Add widget</string>

    <string name="txt_measure">Measure</string>
    <string name="txt_quantity">Quantity</string>
    <string name="txt_ingredient">Ingredient</string>

    <string name="show_data_widget">Show in Widget</string>
    <string name="toast_info_widget">Ingredients inserted in widget</string>

</resources>
