<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_info"
        android:title="@string/show_data_widget"
        android:icon="@drawable/blank_star"
        app:showAsAction="ifRoom"/>

</menu>